Multiplatform concurrent support for building

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Seguro Médico",
   "main": "index.js",
   "scripts": {
-    "build": "node src/utils/graphql-build.js && prisma-import -s src/modules/**/*.prisma -o dist/schema.prisma --force && prisma generate --schema=./dist/schema.prisma && webpack --mode production",
-    "dev": "nodemon -w src -e graphql --exec 'node src/utils/graphql-build.js' & nodemon -w src/modules -e prisma --exec 'prisma-import -s src/modules/**/*.prisma -o dist/schema.prisma --force && prisma generate --schema=./dist/schema.prisma' & webpack --watch --mode development & nodemon -w dist -e js,json,graphql dist/index.js",
-    "db:migrate": "prisma-import -s src/modules/**/*.prisma -o dist/schema.prisma --force && prisma generate --schema=./dist/schema.prisma && prisma migrate dev --schema=./dist/schema.prisma",
+    "db:prisma": "prisma-import -s src/modules/**/*.prisma -o dist/schema.prisma --force && prisma generate --schema=./dist/schema.prisma",
+    "db:migrate": "npm run db:prisma && prisma migrate dev --schema=./dist/schema.prisma",
+    "build": "node src/utils/graphql-build.js && npm run db:prisma && webpack --mode production",
+    "dev:graphql": "nodemon -w src -e graphql --exec \"node src/utils/graphql-build.js\"",
+    "dev:js": "webpack --watch --mode development",
+    "dev:prisma": "nodemon -w src/modules -e prisma --exec \"npm run db:prisma\"",
+    "dev:start": "nodemon -w dist -e js,json,graphql dist/index.js",
+    "dev": "run-p dev:graphql dev:prisma dev:js",
     "lint": "eslint \"src/**/*.ts\"",
     "seed:all": "npx ts-node src/support/seeders/all.seeder.ts"
   },
@@ -18,6 +23,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.0",
+    "npm-run-all": "^4.1.5",
     "prisma": "^5.10.2",
     "prisma-import": "^1.0.5",
     "ts-loader": "^9.5.1",
